--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>React App</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <script defer="defer" src="./react-shop/static/js/main.6deac64b.js"> </script>
-    <link href="./react-shop/static/css/main.1f3ea2ee.css" rel="stylesheet"></head>
+    <script defer="defer" src="/react-shop/static/js/main.6deac64b.js"> </script>
+    <link href="/react-shop/static/css/main.1f3ea2ee.css" rel="stylesheet"></head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root">
